@@ -252,7 +252,9 @@ isIncomplete(con)
   \code{close} returns either \code{NULL} or an integer status,
   invisibly. The status is from when the connection was last closed and
   is available only for some types of connections (e.g., pipes, files and
-  fifos): typically zero values indicate success.
+  fifos): typically zero values indicate success.  Negative values will
+  result in a warning; if writing, these may indicate write failures and should
+  not be ignored.
 
   \code{isOpen} returns a logical value, whether the connection is
   currently open.
